src/objects/npsp__Data_Import_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>npsp__Account_Custom_Unique_ID__c</fullName>
        <description>An optional Unique Id field to use for Organization Account matching</description>
        <inlineHelpText>An optional Unique Id field to use for Organization Account matching</inlineHelpText>
        <label>Account Custom Unique ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Account_Matching_Rule__c</fullName>
        <description>Specifies which rule to follow when trying to match Accounts in Data Import records against existing Accounts.</description>
        <inlineHelpText>Specifies which rule to follow when trying to match Accounts in Data Import records against existing Accounts.</inlineHelpText>
        <label>Account Matching Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Batch_Size__c</fullName>
        <defaultValue>50</defaultValue>
        <description>The number of NPSP Data Import records to process in each batch.</description>
        <inlineHelpText>The number of NPSP Data Import records to process in each batch.</inlineHelpText>
        <label>Batch Process Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Contact_Custom_Unique_ID__c</fullName>
        <description>An optional Unique Id field to use for Contact matching</description>
        <inlineHelpText>An optional Unique Id field to use for Contact matching</inlineHelpText>
        <label>Contact Custom Unique ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Contact_Matching_Rule__c</fullName>
        <defaultValue>&quot;Firstname,Lastname,Email&quot;</defaultValue>
        <description>Specifies which rule to follow when trying to match Contacts in Data Import records against existing Contacts.</description>
        <inlineHelpText>Specifies which rule to follow when trying to match Contacts in Data Import records against existing Contacts.</inlineHelpText>
        <label>Contact Matching Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Donation_Date_Range__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Enter the number of days from the Donation Date that the Data Importer should consider when looking for a matching Opportunity or Payment. The Data Importer will choose the matching Opportunity or Payment whose date falls within the number of days AND is closest to the Donation Date.</description>
        <inlineHelpText>Enter the number of days from the Donation Date to consider when looking for a matching Opportunity or Payment. The Data Importer will choose the matching Opp or Payment whose date falls within the number of days AND is closest to the Donation Date.</inlineHelpText>
        <label>Number of Days from Donation Date</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Donation_Matching_Behavior__c</fullName>
        <defaultValue>&quot;Do Not Match&quot;</defaultValue>
        <description>Defines how the Data Importer should handle matching Donations.  Must be one of the values defined in BDI_DataImport_API.</description>
        <inlineHelpText>Defines how the Data Importer should handle matching Donations. You must choose a value.</inlineHelpText>
        <label>Donation Matching Behavior</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Donation_Matching_Implementing_Class__c</fullName>
        <description>The full developer name of an Apex class that implements the BDI_IMatching interface for Donations.</description>
        <inlineHelpText>The developer name of an Apex class that implements the BDI_IMatching interface for Donations. Leave blank to let NPSP handle matching.</inlineHelpText>
        <label>Donation Matching Implementing Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Donation_Matching_Rule__c</fullName>
        <defaultValue>&quot;npsp__Donation_Amount__c;npsp__Donation_Date&quot;</defaultValue>
        <description>Specifies which fields to match by when trying to match Donations in Data Import records against existing Opportunities and Payments.</description>
        <inlineHelpText>Specifies which fields to match by when trying to match Donations in Data Import records against existing Opportunities and Payments. Control or Command click to select more than one field.</inlineHelpText>
        <label>Donation Matching Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Post_Process_Implementing_Class__c</fullName>
        <description>The developer name of an Apex class that implements the BDI_IPostProcess interface for NPSP Data Import records.</description>
        <inlineHelpText>The developer name of an Apex class that implements the BDI_IPostProcess interface for NPSP Data Import records.</inlineHelpText>
        <label>Post Process Implementing Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Run_Opportunity_Rollups_while_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, NPSP calculates donor statistics when donations are processed. If unchecked, donor statistics are calculated during the default nightly Scheduled Job. Note that selecting this checkbox may slow down processing of this batch.</description>
        <inlineHelpText>When checked, NPSP calculates donor statistics when donations are processed. If unchecked, donor statistics are calculated during the default nightly Scheduled Job. Note that selecting this checkbox may slow down processing of this batch.</inlineHelpText>
        <label>Calculate Donation Rollups with Batch</label>
        <type>Checkbox</type>
    </fields>
    <label>Data Import Settings</label>
</CustomObject>